work/v06/API_INVENTORY_BEFORE.md
# `@syna/core` public API inventory

Generated by `node scripts/api-inventory.mjs` from `packages/core/src/index.ts` (package version 0.5.0, commit 4a67b99).

| exports | value exports | type-only exports | members (interface/class) | union members | `@deprecated` items |
|---|---|---|---|---|---|
| 104 | 11 | 93 | 249 | 42 | 5 |

## Value exports (11)

### `auto` — function

Declared in `packages/core/src/definition.ts`.

```ts
function auto<C extends Contract<any>>(contract: C): AutoImplementation<C>
```

### `createRuntime` — function

Declared in `packages/core/src/runtime.ts`.

```ts
function createRuntime(options: CreateRuntimeOptions): SynaRuntime
```

### `defaultRuntimePolicy` — const

Declared in `packages/core/src/runtime.ts`.

```ts
const defaultRuntimePolicy: RuntimePolicy
```

### `definePackage` — function

Declared in `packages/core/src/definition.ts`.

```ts
function definePackage(manifest: PackageManifest): PackageDefinitions
```

### `forward` — function

Declared in `packages/core/src/definition.ts`.

```ts
function forward<D extends Dependency>(get: () => D): ForwardDependency<D>
```

### `isSynaError` — function

Declared in `packages/core/src/errors.ts`.

```ts
function isSynaError(error: unknown, code?: SynaErrorCode): error is SynaError
```

### `loadAll` — function

Declared in `packages/core/src/loading.ts`.

```ts
async function loadAll< const Refs extends Readonly<Record<string, DependencyRef<unknown>>>, >(refs: Refs, options?: LoadOptions): Promise<LoadedDependencies<Refs>>
```

### `override` — function

Declared in `packages/core/src/definition.ts`.

```ts
function override< From extends ServiceRevision<any>, To extends ServiceRevision<any>, >( from: From, to: ServiceInstance<To> extends ServiceInstance<From> ? To : never, ): ServiceOverride<From, To>
```

### `parseImplementationRef` — function

Declared in `packages/core/src/definition.ts`.

```ts
function parseImplementationRef<C extends Contract<any>>( contract: C, input: unknown, ): PersistentImplementationRef<C>
```

### `serviceRange` — function

Declared in `packages/core/src/definition.ts`.

```ts
function serviceRange<S extends ServiceRevision<any, any>>( service: S, range = '*', ): ServiceRange<S['family']>
```

### `SynaError` — class

Declared in `packages/core/src/errors.ts`.

```ts
class SynaError extends Error
  readonly code: SynaErrorCode
  readonly details: Readonly<Record<string, unknown>>
  constructor( code: SynaErrorCode, message: string, details: Readonly<Record<string, unknown>> = {}, options?: ErrorOptions, )
```

## Type exports (93)

### `AllImplementations` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface AllImplementations<C extends Contract<any> = Contract<any>>
  readonly kind: 'all-implementations'
  readonly contract: C
```

### `AutoImplementation` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface AutoImplementation<C extends Contract<any> = Contract<any>>
  readonly kind: 'auto-implementation'
  readonly contract: C
```

### `AvailableImplementationCandidate` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type AvailableImplementationCandidate<C extends Contract<any> = Contract<any>> = ImplementationCandidate<C> & { readonly availability: { readonly status: 'available' } }
```

### `Awaitable` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type Awaitable<T> = T | PromiseLike<T>
```

### `Binding` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Binding<C extends Contract<any> = Contract<any>>
  readonly kind: 'binding'
  readonly id: string
  readonly apiVersion: number
  readonly contract: C
  readonly metadata: Readonly<DescriptorMetadata>
  to<S extends ServiceRevision<any, any>>( service: ServiceInstance<S> extends ContractApi<C> ? S : never, version?: string, ): PersistentImplementationRef<C>
  parse(input: unknown): PersistentImplementationRef<C>
```

### `BindingAssignment` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type BindingAssignment<B extends Binding<any>> = | PersistentImplementationRef<B['contract']> | ServiceRevision<ContractApi<B['contract']>>
```

### `BoundEntry` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface BoundEntry<E extends EntryDescriptor<any, any>>
  enter(...args: EntryArguments<E>): Promise<EnvHandle<E['requires']>>
  run<Result>(...args: EntryRunArguments<E, Result>): Promise<Result>
  check(...args: EntryArguments<E>): Promise<EntryCheck>
  explain(...args: EntryArguments<E>): Promise<EntryExplanation>
```

### `CandidateAvailability` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type CandidateAvailability = | { readonly status: 'available' } | { readonly status: 'unavailable' readonly code: DiagnosticCode readonly message: string readonly details: Readonly<Record<string, unknown>> }
```

### `CandidateRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface CandidateRef<C extends Contract<any> = Contract<any>>
  readonly kind: 'candidate-ref'
  readonly contract: C
  readonly familyId: string
  readonly version: string
  readonly __contract?: C
```

### `Contract` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Contract<Api = unknown>
  readonly kind: 'contract'
  readonly id: string
  readonly apiVersion: number
  readonly metadata: Readonly<DescriptorMetadata>
  /** @deprecated Compatibility only. */ readonly selector: ImplementationSelectorDependency<Contract<Api>>
  readonly all: AllImplementations<Contract<Api>>
  readonly __api?: Api
```

### `ContractApi` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ContractApi<C> = C extends Contract<infer Api> ? Api : never
```

### `CreateRuntimeOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface CreateRuntimeOptions
  readonly services: readonly ServiceRevision[]
  readonly policy?: Partial<RuntimePolicy>
  readonly overrides?: readonly ServiceOverride[]
  readonly planCache?: PlanCacheOptions
  readonly initialization?: InitializationOptions
  readonly disposal?: DisposalOptions
  readonly planning?: PlanningOptions
  readonly diagnostics?: DiagnosticsOptions
```

### `DefinitionOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DefinitionOptions
  readonly apiVersion?: number
  readonly metadata?: DescriptorMetadata
```

### `Dependency` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type Dependency = | ServiceRevision<any, any> | ServiceRange<any> | Contract<any> | Input<any> | Binding<any> | AutoImplementation<any> | ImplementationSelectorDependency<any> | AllImplementations<any> | EntryDescriptor<any, any> | ForwardDependency<any>
```

### `DependencyMap` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyMap = Readonly<Record<string, Dependency>>
```

### `DependencyOutput` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyOutput<D> = UnwrapForward<D> extends ServiceRevision<infer Instance, any> ? Instance : UnwrapForward<D> extends ServiceRange<infer Family> ? ServiceFamilyApi<Family> : UnwrapForward<D> extends Contract<infer Api> ? Api : UnwrapForward<D> extends Input<infer T> ? T : UnwrapForward<D> extends Binding<infer C> ? ContractApi<C> : UnwrapForward<D> extends AutoImplementation<infer C> ? ContractApi<C> : UnwrapForward<D> extends ImplementationSelectorDependency<infer C> ? ImplementationSelector<C> : UnwrapForward<D> extends AllImplementations<infer C> ? ImplementationSet<C> : UnwrapForward<D> extends EntryDescriptor<any, any> ? BoundEntry<UnwrapForward<D>> : never
```

### `DependencyRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DependencyRef<T>
  load(options?: LoadOptions): Promise<T>
  /** @deprecated Since v0.5 an un-awaited `load()` is already a background operation; `preload()` is `void ref.load().catch(() => undefined)` and is kept only as the structural discriminator that keeps Input refs out of `loadAll()`. */ preload(): void
```

### `DependencyRefFor` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyRefFor<D> = UnwrapForward<D> extends Input<infer T> ? InputRef<T> : DependencyRef<DependencyOutput<D>>
```

### `DependencyRefs` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyRefs<Requires extends DependencyMap> = { readonly [Key in keyof Requires]: DependencyRefFor<Requires[Key]> }
```

### `DeriveOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DeriveOptions
  readonly fresh?: readonly ScopeTarget[]
  readonly share?: readonly ScopeTarget[]
```

### `DescriptorMetadata` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DescriptorMetadata
  readonly displayName?: string
  readonly description?: string
  readonly tags?: readonly string[]
  readonly data?: Readonly<Record<string, MetadataValue>>
```

### `DiagnosticCode` — type

Declared in `packages/core/src/errors.ts`.

```ts
type DiagnosticCode = SynaErrorCode | 'UNKNOWN_ERROR'
  | 'UNKNOWN_ERROR'
```

### `DiagnosticsOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DiagnosticsOptions
  readonly onEvent?: (event: RuntimeEvent) => void
```

### `DisposalOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DisposalOptions
  readonly graceMs?: number
```

### `EntryArguments` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryArguments<E extends EntryDescriptor<any, any>> = keyof E['parameters'] extends never ? [parameters?: EntryParameters<E>] : [parameters: EntryParameters<E>]
```

### `EntryCallback` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryCallback<E extends EntryDescriptor<any, any>, Result> = ( dependencies: EntryDependencies<E>, env: EnvHandle<E['requires']>, ) => Awaitable<Result>
```

### `EntryCheck` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryCheck = | { readonly ok: true; readonly inspection: PlannedEnvInspection } | { readonly ok: false; readonly error: EntryDiagnostic }
```

### `EntryDefinition` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryDefinition<Requires extends DependencyMap, Parameters extends EntryParameterMap> extends DefinitionOptions
  readonly requires?: Requires
  readonly parameters?: Parameters
  readonly scope?: DeriveOptions
```

### `EntryDependencies` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryDependencies<E extends EntryDescriptor<any, any>> = DependencyRefs<E['requires']>
```

### `EntryDescriptor` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryDescriptor<Requires extends DependencyMap = DependencyMap, Parameters extends EntryParameterMap = EntryParameterMap>
  readonly kind: 'entry'
  readonly package: PackageDescriptor
  readonly id: string
  readonly apiVersion: number
  readonly requires: Requires
  readonly parameters: Parameters
  readonly scope: Readonly<DeriveOptions>
  readonly metadata: Readonly<DescriptorMetadata>
```

### `EntryDiagnostic` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryDiagnostic
  readonly code: DiagnosticCode
  readonly message: string
  readonly details: Readonly<Record<string, unknown>>
```

### `EntryExplanation` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryExplanation = EntryExplanationSuccess | EntryExplanationFailure
```

### `EntryExplanationFailure` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryExplanationFailure
  readonly ok: false
  readonly entry: string
  readonly parent?: string
  readonly error: EntryDiagnostic
  readonly missingInputs: readonly string[]
  readonly missingBindings: readonly string[]
```

### `EntryExplanationSuccess` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryExplanationSuccess
  readonly ok: true
  readonly entry: string
  readonly parent?: string
  readonly parameters: { readonly inputsProvided: readonly string[] readonly inputsInherited: readonly string[] readonly bindingsResolved: Readonly<Record<string, string>> readonly bindingsInherited: Readonly<Record<string, string>> }
  readonly services: ExplainCounts & { readonly eagerToStart: number readonly eagerInherited: number }
  readonly inputs: { readonly inherited: number; readonly provided: number }
  readonly synthetic: ExplainCounts
  readonly choices: Readonly<Record<string, string>>
  readonly nodes: readonly ExplainedNode[]
  readonly forks: readonly ExplainedNode[]
```

### `EntryParameter` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryParameter = Input<any> | Binding<any>
```

### `EntryParameterMap` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryParameterMap = Readonly<Record<string, EntryParameter>>
```

### `EntryParameters` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryParameters<E extends EntryDescriptor<any, any>> = EntryParameterValues<E['parameters']> & { readonly scope?: DeriveOptions }
```

### `EntryParameterValue` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryParameterValue<P extends EntryParameter> = P extends Input<infer T> ? T : P extends Binding<any> ? BindingAssignment<P> : never
```

### `EntryParameterValues` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryParameterValues<Parameters extends EntryParameterMap> = { readonly [Key in keyof Parameters]: EntryParameterValue<Parameters[Key]> }
```

### `EntryRunArguments` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryRunArguments<E extends EntryDescriptor<any, any>, Result> = keyof E['parameters'] extends never ? | [callback: EntryCallback<E, Result>] | [parameters: EntryParameters<E>, callback: EntryCallback<E, Result>] : [parameters: EntryParameters<E>, callback: EntryCallback<E, Result>]
```

### `EnvHandle` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EnvHandle<Requires extends DependencyMap = DependencyMap>
  readonly id: string
  readonly deps: DependencyRefs<Requires>
  readonly state: EnvState
  enter<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryArguments<E> ): Promise<EnvHandle<E['requires']>>
  run<E extends EntryDescriptor<any, any>, Result>( entry: E, ...args: EntryRunArguments<E, Result> ): Promise<Result>
  check<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryArguments<E> ): Promise<EntryCheck>
  explain<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryArguments<E> ): Promise<EntryExplanation>
  derive(options?: DeriveOptions): Promise<EnvHandle<{}>>
  bind<E extends EntryDescriptor<any, any>>(entry: E): BoundEntry<E>
  inspect(): EnvInspection
  dispose(): Promise<void>
  [Symbol.asyncDispose](): Promise<void>
```

### `EnvInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EnvInspection
  readonly id: string
  readonly parentId?: string
  readonly state: string
  readonly nodes: readonly EnvInspectionNode[]
```

### `EnvInspectionNode` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EnvInspectionNode
  readonly nodeId: string
  readonly kind: InspectionNodeKind
  readonly label: string
  readonly slotId: string
  readonly ownerEnvId: string
  readonly state: string
  readonly dependencies: Readonly<Record<string, string>>
```

### `EnvState` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EnvState = 'activating' | 'ready' | 'disposing' | 'disposed'
  | 'activating'
  | 'ready'
  | 'disposing'
  | 'disposed'
```

### `ExplainCounts` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ExplainCounts
  readonly inherited: number
  readonly new: number
  readonly forked: number
```

### `ExplainedNode` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ExplainedNode
  readonly nodeId: string
  readonly kind: InspectionNodeKind
  readonly label: string
  readonly disposition: NodeDisposition
  readonly eager: boolean
  readonly cause?: ForkCause
  readonly path: readonly string[]
```

### `FailureAfterExhaustion` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type FailureAfterExhaustion = 'sticky' | 'retry-on-next-load'
  | 'sticky'
  | 'retry-on-next-load'
```

### `ForkCause` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ForkCause = | { readonly kind: 'root' } | { readonly kind: 'not-in-parent' } | { readonly kind: 'fresh'; readonly target: string } | { readonly kind: 'input-provided'; readonly input: string } | { readonly kind: 'binding-changed'; readonly binding: string } | { readonly kind: 'structure-changed' } | { readonly kind: 'anchor-dependency-mismatch'; readonly family: string; readonly via: string } | { readonly kind: 'dependency-forked'; readonly via: string; readonly dependency: string }
```

### `ForwardDependency` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ForwardDependency<D = Dependency>
  readonly kind: 'forward-dependency'
  readonly get: () => D
```

### `ImplementationCandidate` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationCandidate<C extends Contract<any> = Contract<any>> extends ImplementationDescriptor<C>
  readonly ref: CandidateRef<C>
  readonly availability: CandidateAvailability
```

### `ImplementationDescriptor` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationDescriptor<C extends Contract<any> = Contract<any>>
  readonly contractId: string
  readonly familyId: string
  readonly version: string
  readonly eager: boolean
  readonly familyMetadata: Readonly<DescriptorMetadata>
  readonly revisionMetadata: Readonly<DescriptorMetadata>
  readonly persistentRef: PersistentImplementationRef<C>
```

### `ImplementationLease` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationLease<C extends Contract<any> = Contract<any>>
  readonly env: EnvHandle
  readonly implementation: DependencyRef<ContractApi<C>>
  dispose(): Promise<void>
  [Symbol.asyncDispose](): Promise<void>
```

### `ImplementationSelector` — interface — **@deprecated** Compatibility only; `open()`/`run()` require a Ready anchor Env.

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationSelector<C extends Contract<any> = Contract<any>> extends Iterable<ImplementationCandidate<C>>
  readonly contract: C
  readonly candidates: readonly ImplementationCandidate<C>[]
  resolve(ref: PersistentImplementationRef<C>): ImplementationCandidate<C>
  open( candidate: ImplementationCandidate<C> | CandidateRef<C> | PersistentImplementationRef<C>, ): Promise<ImplementationLease<C>>
  run<Result>( candidate: ImplementationCandidate<C> | CandidateRef<C> | PersistentImplementationRef<C>, callback: ( implementation: DependencyRef<ContractApi<C>>, env: EnvHandle, ) => Awaitable<Result>, ): Promise<Result>
```

### `ImplementationSelectorDependency` — interface — **@deprecated** Minimal compatibility surface; prefer `Contract.all` or an explicit Entry.

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationSelectorDependency<C extends Contract<any> = Contract<any>>
  readonly kind: 'implementation-selector'
  readonly contract: C
```

### `ImplementationSet` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationSet<C extends Contract<any> = Contract<any>> extends Iterable<ImplementationCandidate<C>>
  readonly contract: C
  readonly candidates: readonly ImplementationCandidate<C>[]
  resolve(ref: PersistentImplementationRef<C>): ImplementationCandidate<C>
  load( candidate: ImplementationCandidate<C> | CandidateRef<C> | PersistentImplementationRef<C>, options?: LoadOptions, ): Promise<ContractApi<C>>
```

### `InitializationOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface InitializationOptions
  readonly deadlineMs?: number
```

### `Input` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Input<ValueType = unknown>
  readonly kind: 'input'
  readonly id: string
  readonly apiVersion: number
  readonly metadata: Readonly<DescriptorMetadata>
  readonly __value?: ValueType
```

### `InputRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface InputRef<T>
  read(): T
  /** @deprecated Use `read()`. Thenable payloads are awaited by this form. */ load(): Promise<Awaited<T>>
```

### `InputType` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type InputType<I> = I extends Input<infer T> ? T : never
```

### `InspectionNodeKind` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type InspectionNodeKind = | 'service' | 'input' | 'binding' | 'selector' | 'all' | 'entry'
  | 'service'
  | 'input'
  | 'binding'
  | 'selector'
  | 'all'
  | 'entry'
```

### `LoadedDependencies` — type

Declared in `packages/core/src/loading.ts`.

```ts
type LoadedDependencies<Refs extends Readonly<Record<string, DependencyRef<unknown>>>> = { readonly [Key in keyof Refs]: Refs[Key] extends DependencyRef<infer Value> ? Value : never }
```

### `LoadOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface LoadOptions
  readonly signal?: AbortSignal
```

### `MetadataValue` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type MetadataValue = | string | number | boolean | null | readonly MetadataValue[] | { readonly [key: string]: MetadataValue }
```

### `NodeDisposition` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type NodeDisposition = 'inherited' | 'new' | 'forked'
  | 'inherited'
  | 'new'
  | 'forked'
```

### `NormalizedServiceFailurePolicy` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface NormalizedServiceFailurePolicy
  readonly attempts: number
  readonly delayMs: number
  readonly afterExhaustion: FailureAfterExhaustion
  readonly cooldownMs: number
```

### `PackageDefinitions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PackageDefinitions
  readonly package: PackageDescriptor
  contract<Api>(): Contract<Api>
  contract<Api>(options: DefinitionOptions): Contract<Api>
  contract<Api>(name: string, options?: DefinitionOptions): Contract<Api>
  input<T>(name: string, options?: DefinitionOptions): Input<T>
  binding<C extends Contract<any>>( name: string, contract: C, options?: DefinitionOptions, ): Binding<C>
  service< const Requires extends DependencyMap = {}, const Provides extends readonly Contract[] = readonly [], Instance extends ProvidedShape<Provides> = ProvidedShape<Provides>, >( definition: ServiceDefinition<Requires, Provides, Instance>, ): ServiceRevision<Instance, ProvidedShape<Provides>>
  service< const Requires extends DependencyMap = {}, const Provides extends readonly Contract[] = readonly [], Instance extends ProvidedShape<Provides> = ProvidedShape<Provides>, >( name: string, definition: ServiceDefinition<Requires, Provides, Instance>, ): ServiceRevision<Instance, ProvidedShape<Provides>>
  entry< const Requires extends DependencyMap = {}, const Parameters extends EntryParameterMap = {}, >( definition: EntryDefinition<Requires, Parameters>, ): EntryDescriptor<Requires, Parameters>
  entry< const Requires extends DependencyMap = {}, const Parameters extends EntryParameterMap = {}, >( name: string, definition: EntryDefinition<Requires, Parameters>, ): EntryDescriptor<Requires, Parameters>
```

### `PackageDescriptor` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PackageDescriptor
  readonly name: string
  readonly id: string
  readonly version: string
  readonly metadata: Readonly<DescriptorMetadata>
```

### `PackageManifest` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PackageManifest
  readonly name: string
  readonly version: string
  readonly description?: string
  readonly syna?: { readonly id?: string readonly metadata?: DescriptorMetadata }
```

### `PersistentImplementationRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PersistentImplementationRef<C extends Contract<any> = Contract<any>>
  readonly kind: 'persistent-implementation-ref'
  readonly contractId: string
  readonly implementationId: string
  readonly version: string
  readonly __contract?: C
```

### `PlanCacheOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PlanCacheOptions
  readonly maxEntries?: number
```

### `PlannedEnvInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PlannedEnvInspection
  readonly nodeCount: number
  readonly ownedSlotCount: number
  readonly reusedSlotCount: number
  readonly eagerServiceCount: number
  readonly selectedRevisions: Readonly<Record<string, string>>
```

### `PlanningOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PlanningOptions
  readonly searchBudget?: number
```

### `ProvidedShape` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ProvidedShape<Provides extends readonly Contract[]> = [Provides[number]] extends [never] ? unknown : UnionToIntersection<ContractApiUnion<Provides>>
```

### `RuntimeCatalog` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimeCatalog
  implementations<C extends Contract<any>>( contract: C, ): readonly ImplementationDescriptor<C>[]
  resolve<C extends Contract<any>>( ref: PersistentImplementationRef<C>, ): ImplementationDescriptor<C>
  revisions(familyId: string): readonly string[]
```

### `RuntimeEvent` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type RuntimeEvent = | { readonly type: 'late-setup-result' readonly slot: string readonly revision: string readonly env: string readonly cleanupErrors: readonly unknown[] } | { readonly type: 'late-setup-failure' readonly slot: string readonly revision: string readonly env: string readonly error: unknown readonly cleanupErrors: readonly unknown[] } | { readonly type: 'attempt-abandoned' /** `setup`: the raw Promise is still pending. `rollback`: the setup settled but its cleanups outlived the grace. */ readonly phase: 'setup' | 'rollback' readonly slot: string readonly revision: string readonly env: string readonly elapsedMs: number } | { /** * The raw setup Promise of a timed-out or abandoned attempt was garbage- * collected before settling: nothing can resolve it any more. Cleanups the * attempt registered were run and the attempt is settled as failed. */ readonly type: 'attempt-unreachable' readonly slot: string readonly revision: string readonly env: string readonly elapsedMs: number readonly cleanupErrors: readonly unknown[] } | { readonly type: 'foreign-thenable-setup' readonly slot: string readonly revision: string readonly env: string }
```

### `RuntimeInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimeInspection
  readonly admittedServices: readonly string[]
  readonly internalServices: readonly string[]
  readonly overriddenServices: readonly string[]
  readonly definitions: DefinitionCounts
  readonly rootEnvCount: number
  readonly liveEnvCount: number
  readonly unsettledAttempts: readonly UnsettledAttemptInspection[]
  readonly planCache: { readonly hits: number readonly misses: number readonly entries: number readonly evictions: number readonly maxEntries: number }
  readonly definitionWarnings: readonly string[]
```

### `RuntimePolicy` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimePolicy
  orderAutoCandidates( contract: Contract, candidates: readonly ServiceRevision[], context: RuntimePolicyContext, ): readonly ServiceRevision[]
  orderVersionCandidates( family: ServiceFamily, candidates: readonly ServiceRevision[], context: RuntimePolicyContext, ): readonly ServiceRevision[]
```

### `RuntimePolicyContext` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimePolicyContext
  readonly site: string
  readonly parentActiveRevisionKeys: ReadonlySet<string>
```

### `ScopeTarget` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ScopeTarget = ServiceRevision<any> | ServiceFamily<any>
```

### `ServiceDefinition` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceDefinition<Requires extends DependencyMap, Provides extends readonly Contract[], Instance>
  readonly requires?: Requires
  readonly provides?: Provides
  readonly eager?: boolean
  readonly uniqueWithin?: 'lineage'
  readonly failure?: ServiceFailurePolicy
  readonly setupDeadlineMs?: number
  readonly metadata?: DescriptorMetadata
  readonly revisionMetadata?: DescriptorMetadata
  readonly setup: ( dependencies: DependencyRefs<Requires>, lifecycle: ServiceLifecycle, ) => SetupResult<Instance>
```

### `ServiceFailurePolicy` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ServiceFailurePolicy = | 'sticky' | { /** Total attempts in one materialization sequence, including the first. */ readonly attempts?: number /** Delay between attempts in the same sequence. */ readonly delayMs?: number readonly afterExhaustion?: FailureAfterExhaustion /** Minimum delay before a future load may start another sequence. */ readonly cooldownMs?: number }
  | 'sticky'
```

### `ServiceFamily` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceFamily<PublicApi = unknown>
  readonly kind: 'service-family'
  readonly id: string
  readonly uniqueWithin: UniquenessPolicy
  readonly metadata: Readonly<DescriptorMetadata>
  readonly __publicApi?: PublicApi
```

### `ServiceFamilyApi` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ServiceFamilyApi<F> = F extends ServiceFamily<infer Api> ? Api : never
```

### `ServiceInstance` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ServiceInstance<S> = S extends ServiceRevision<infer Instance, any> ? Instance : never
```

### `ServiceLifecycle` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceLifecycle
  readonly signal: AbortSignal
  onDispose(cleanup: () => Awaitable<void>): void
```

### `ServiceOverride` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceOverride<From extends ServiceRevision<any> = ServiceRevision<any>, To extends ServiceRevision<any> = ServiceRevision<any>>
  readonly kind: 'service-override'
  readonly from: From
  readonly to: To
```

### `ServiceRange` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceRange<F extends ServiceFamily<any> = ServiceFamily<any>>
  readonly kind: 'service-range'
  readonly family: F
  readonly range: string
  readonly origin: ServiceRevision<any, any>
  readonly requiredContractIds: readonly string[]
```

### `ServiceRevision` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceRevision<Instance = unknown, PublicApi = unknown>
  readonly kind: 'service-revision'
  readonly package: PackageDescriptor
  readonly family: ServiceFamily<PublicApi>
  readonly version: string
  readonly key: string
  readonly requires: DependencyMap
  readonly provides: readonly Contract[]
  readonly eager: boolean
  readonly failure: NormalizedServiceFailurePolicy
  readonly setupDeadlineMs: number | undefined
  readonly metadata: Readonly<DescriptorMetadata>
  setup( dependencies: DependencyRefs<DependencyMap>, lifecycle: ServiceLifecycle, ): SetupResult<Instance>
  range(version?: string): ServiceRange<ServiceFamily<PublicApi>>
```

### `SetupResult` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type SetupResult<Instance> = Awaitable<Instance>
```

### `SynaErrorCode` — type

Declared in `packages/core/src/errors.ts`.

```ts
type SynaErrorCode = | 'AMBIGUOUS_IMPLEMENTATION' | 'CONSTRAINT_VIOLATION' | 'DUPLICATE_DEFINITION' | 'ENTRY_ACTIVATION_FAILED' | 'INCOMPATIBLE_IMPLEMENTATION' | 'INITIALIZATION_TIMEOUT' | 'INVALID_DESCRIPTOR' | 'INVALID_ENV_STATE' | 'LINEAGE_UNIQUENESS_CONFLICT' | 'LOAD_CANCELLED' | 'MISSING_AUTO_POLICY' | 'MISSING_BINDING' | 'MISSING_IMPLEMENTATION' | 'MISSING_INPUT' | 'MISSING_SERVICE' | 'OWNER_NOT_READY' | 'PLANNING_BUDGET_EXCEEDED' | 'ROLLBACK_FAILED' | 'RUNTIME_MISMATCH' | 'SHARE_CONSTRAINT_FAILED' | 'UNAVAILABLE_IMPLEMENTATION' | 'UNSATISFIABLE_TOPOLOGY' | 'UNSETTLED_ATTEMPT'
  | 'AMBIGUOUS_IMPLEMENTATION'
  | 'CONSTRAINT_VIOLATION'
  | 'DUPLICATE_DEFINITION'
  | 'ENTRY_ACTIVATION_FAILED'
  | 'INCOMPATIBLE_IMPLEMENTATION'
  | 'INITIALIZATION_TIMEOUT'
  | 'INVALID_DESCRIPTOR'
  | 'INVALID_ENV_STATE'
  | 'LINEAGE_UNIQUENESS_CONFLICT'
  | 'LOAD_CANCELLED'
  | 'MISSING_AUTO_POLICY'
  | 'MISSING_BINDING'
  | 'MISSING_IMPLEMENTATION'
  | 'MISSING_INPUT'
  | 'MISSING_SERVICE'
  | 'OWNER_NOT_READY'
  | 'PLANNING_BUDGET_EXCEEDED'
  | 'ROLLBACK_FAILED'
  | 'RUNTIME_MISMATCH'
  | 'SHARE_CONSTRAINT_FAILED'
  | 'UNAVAILABLE_IMPLEMENTATION'
  | 'UNSATISFIABLE_TOPOLOGY'
  | 'UNSETTLED_ATTEMPT'
```

### `SynaRuntime` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface SynaRuntime
  readonly catalog: RuntimeCatalog
  enter<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryArguments<E> ): Promise<EnvHandle<E['requires']>>
  run<E extends EntryDescriptor<any, any>, Result>( entry: E, ...args: EntryRunArguments<E, Result> ): Promise<Result>
  check<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryArguments<E> ): Promise<EntryCheck>
  explain<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryArguments<E> ): Promise<EntryExplanation>
  inspect(): RuntimeInspection
  dispose(): Promise<void>
  [Symbol.asyncDispose](): Promise<void>
```

### `UniquenessPolicy` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type UniquenessPolicy = 'none' | 'lineage'
  | 'none'
  | 'lineage'
```

### `UnsettledAttemptInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface UnsettledAttemptInspection
  readonly attempt: number
  readonly slot: string
  readonly revision: string
  readonly env: string
  readonly state: 'timed-out' | 'abandoned' | 'rolling-back' | 'settling'
  readonly runningForMs: number
```

## `@deprecated` items (5)

| item | kind | note |
|---|---|---|
| `Contract.selector` | member | Compatibility only. |
| `DependencyRef.preload` | member | Since v0.5 an un-awaited `load()` is already a background operation; `preload()` is `void ref.load().catch(() => undefined)` and is kept only as the structural discriminator that keeps Input refs out of `loadAll()`. |
| `ImplementationSelector` | interface | Compatibility only; `open()`/`run()` require a Ready anchor Env. |
| `ImplementationSelectorDependency` | interface | Minimal compatibility surface; prefer `Contract.all` or an explicit Entry. |
| `InputRef.load` | member | Use `read()`. Thenable payloads are awaited by this form. |
